Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7477

Multi length strings do not work in QML

    XMLWordPrintable

Details

    • 0b8ef5c78b724901cfae343920b3e9e8f4a78fda

    Description

      When using the Unicode String Terminator escape sequence \x9C or \u009C in QML text, it is not correctly terminated;

      import Qt 4.6
      
      Rectangle {
          width: 640
          height: 480
          Column {
              width: parent.width
              Text {
                  text: "First, run lupdate on this qml file with -ts translation.ts"
              }
              Text {
                  text: "Then, translate with Linguist and release as translation.qm"
              }
              Text {
                  text: "Finally, run qmlviewer on this file with -translation translation.qm"
              }
              Text {
                  text: qsTr("This text should be translated and %1 is the arg").arg("foo")
              }
              Text {
                  width: parent.width
                  text: 'Here is some very long text that we should truncate when sizing window\\u009CHere is a shorter version\\x9CShort'
              }
          }
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            brasser Michael Brasser (closed Nokia identity) (Inactive)
            hhartz Henrik Hartz (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes