Fix elision and multilength strings when resizing a Text element.

They were incorrectly wrapping when the width changed.

Task-number: QTBUG-7477