tests/auto/declarative/visual/qmlgraphicstext/elide/data-MAC/elide.qml
@@ -6,239 +6,239 @@ VisualTest {
     }
     Frame {
         msec: 16
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 32
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 48
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 64
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 80
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 96
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 112
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 128
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 144
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 160
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 176
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 192
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 208
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 224
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 240
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 256
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 272
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 288
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 304
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 320
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 336
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 352
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 368
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 384
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 400
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 416
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 432
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 448
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 464
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 480
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 496
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 512
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 528
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 544
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 560
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 576
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 592
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 608
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 624
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 640
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 656
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 672
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 688
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 704
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 720
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 736
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 752
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 768
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 784
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 800
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 816
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 832
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 848
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 864
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 880
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 896
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 912
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 928
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 944
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 960
@@ -246,7 +246,7 @@ VisualTest {
     }
     Frame {
         msec: 976
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Key {
         type: 6
@@ -258,22 +258,22 @@ VisualTest {
     }
     Frame {
         msec: 992
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 1008
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 1024
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 1040
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
     Frame {
         msec: 1056
-        hash: "0ae463f7afb8f41d6c972592ab6124e4"
+        hash: "1678890d66761a30100c37132ccec9a2"
     }
 }
